# FlexPushdownDB

./: CMakeLists.txt
cmake/: External_ANTLR.cmake
normal/: CMakeLists.txt  col.csv
normal-avro-tuple/: CMakeLists.txt
normal-avro-tuple/include/normal/delta_table/: DeltaPartitionTable.h
normal-avro-tuple/src/: DeltaPartitionTable.cpp
normal-avro-tuple/test/: DeltaPartitionTableTest.cpp
normal-avro/include/normal/avro_tuple/: customer.hh  customer_d.hh  date.hh  date_d.hh  lineorder.hh  lineorder_d.hh  part.hh  part_d.hh  supplier.hh  supplier_d.hh
normal-cache/include/normal/cache/: LRUCachingPolicy.h
normal-cache/src/: LRUCachingPolicy.cpp  SegmentCache.cpp
normal-connector/src/: MiniCatalogue.cpp
normal-core/: CMakeLists.txt
normal-core/include/normal/core/: Forward.h  Globals.h  OperatorActor2.h  OperatorContext.h  OperatorManager.h
normal-core/src/: OperatorContext.cpp  OperatorManager.cpp
normal-core/src/cache/: SegmentCacheActor.cpp
normal-core/src/graph/: OperatorGraph.cpp
normal-deltapump/: CMakeLists.txt  README.rst
normal-deltapump/include/deltapump/: .gitignore  BinlogParser.h  makeTuple.h
normal-deltapump/include/deltapump/rangeFile/: globalMins
normal-deltapump/src/deltapump/: BinlogParser.cpp  Parser.java  makeTuple.cpp
normal-deltapump/test/: deltapumpTest.cpp
normal-expression-gandiva/src/: Filter.cpp
normal-htap/: CMakeLists.txt
normal-htap/include/conversion/: Conversion.h
normal-htap/include/deltamanager/: CacheHandler.h  CacheTail.h  DeltaCache.h  DeltaCacheActor.h  DeltaCacheData.h  DeltaCacheKey.h  DeltaCacheOperator.h  GetTailDeltas.h  LoadDeltaRequestMessage.h  LoadDeltaResponseMessage.h  LoadDeltasRequestMessage.h  LoadDeltasResponseMessage.h  LoadTailRequestMessage.h  LoadTailResponseMessage.h  StoreDeltaRequestMessage.h  StoreTailRequestMessage.h
normal-htap/include/deltamerge/: DeltaMerge.h
normal-htap/src/antijoin/: AntiJoinPredicate.cpp  HashAntiJoinProbe.cpp
normal-htap/src/conversion/: Conversion.cpp
normal-htap/src/deltamanager/: CacheHandler.cpp  CacheTail.cpp  DeltaCache.cpp  DeltaCacheActor.cpp  DeltaCacheData.cpp  DeltaCacheKey.cpp  DeltaCacheOperator.cpp  GetTailDeltas.cpp  LoadDeltaRequestMessage.cpp  LoadDeltaResponseMessage.cpp  LoadDeltasRequestMessage.cpp  LoadDeltasResponseMessage.cpp  LoadTailRequestMessage.cpp  LoadTailResponseMessage.cpp  StoreDeltaRequestMessage.cpp  StoreTailRequestMessage.cpp
normal-htap/src/deltamerge/: DeltaMerge.cpp
normal-htap/src/deltapump/: Parser.java
normal-htap/test/: ConversionTest.cpp  S3AvroTest.cpp  lineorder_d.json
normal-plan/: CMakeLists.txt
normal-plan/src/: Planner.cpp
normal-plan/src/mode/: HtapMode.cpp  Mode.cpp  Modes.cpp
normal-plan/src/operator_/: S3SelectScanLogicalOperator.cpp  ScanLogicalOperator.cpp
normal-pushdown/: CMakeLists.txt
normal-pushdown/src/cache/: CacheLoad.cpp
normal-pushdown/src/collate/: Collate2.cpp
normal-pushdown/src/file/: FileScan2.cpp
normal-pushdown/src/s3/: S3Get.cpp
normal-ssb/: CMakeLists.txt
normal-ssb/experiment/: ExperimentMain.cpp  ExperimentUtil.cpp  Tests.cpp  Tests.h
normal-ssb/include/normal/ssb/: Globals.h
normal-ssb/metadata/ssb-sf1-sorted/csv/: partitionNums
normal-ssb/sql/original/: query3.3.sql
normal-tuple/: CMakeLists.txt
normal-tuple/include/normal/tuple/: ArrayAppenderWrapper.h
normal-tuple/src/: ArrayAppenderWrapper.cpp  ColumnBuilder.cpp
normal-util/test/: MainTest.cpp
normal/cmake/: CMakeUtils.cmake  External_arrow.cmake  External_caf.cmake  Findbinutils.cmake
normal/normal-cache/: CMakeLists.txt
normal/normal-cache/src/: BeladyCachingPolicy.cpp  FBRCachingPolicy.cpp  FBRSCachingPolicy.cpp  LRUCachingPolicy.cpp  WFBRCachingPolicy.cpp
normal/normal-connector/: CMakeLists.txt
normal/normal-connector/src/: MiniCatalogue.cpp
normal/normal-connector/src/local-fs/: LocalFilePartition.cpp
normal/normal-connector/src/s3/: S3SelectPartition.cpp
normal/normal-core/: CMakeLists.txt
normal/normal-core/src/: Actors.cpp  Globals.cpp  Normal.cpp  Operator.cpp  OperatorActor.cpp  OperatorContext.cpp  OperatorDirectory.cpp  OperatorManager.cpp  TupleSet.cpp
normal/normal-core/src/cache/: WeightRequestMessage.cpp
normal/normal-core/src/graph/: OperatorGraph.cpp
normal/normal-core/test/: ActorTest.cpp  ErrorOperator.cpp  ErrorOperator.h  OperatorTest.cpp  SimpleOperator.cpp  SimpleOperator.h
normal/normal-expression-gandiva/: CMakeLists.txt
normal/normal-expression-gandiva/src/: Add.cpp  And.cpp  Cast.cpp  Column.cpp  Divide.cpp  EqualTo.cpp  Expression.cpp  GreaterThan.cpp  GreaterThanOrEqualTo.cpp  LessThan.cpp  LessThanOrEqualTo.cpp  Multiply.cpp  Or.cpp  StringLiteral.cpp  Subtract.cpp
normal/normal-frontend/: CMakeLists.txt
normal/normal-frontend/include/normal/frontend/: Client.h  Global.h  Serialization.h
normal/normal-frontend/src/: Client.cpp  Main.cpp  Variant_serialization.cpp
normal/normal-plan/: CMakeLists.txt
normal/normal-plan/src/: PhysicalPlan.cpp  Planner.cpp
normal/normal-pushdown/: CMakeLists.txt
normal/normal-pushdown/bench/: ShuffleBenchmark.cpp
normal/normal-pushdown/src/: AWSClient.cpp  Aggregate.cpp  Collate.cpp  S3SelectScan.cpp
normal/normal-pushdown/test/: AggregateTest.cpp  ArrowCAFSerializationTest.cpp  CacheTest.cpp  FileScanTest.cpp  FilterTest.cpp  GroupTest.cpp  JoinTest.cpp  MainTest.cpp  S3SelectScanTest.cpp  ShuffleTest.cpp  SortTest.cpp
normal/normal-sql/: CMakeLists.txt
normal/normal-sql/src/: Interpreter.cpp
normal/normal-ssb/: CMakeLists.txt
normal/normal-ssb/bench/: Main.cpp
normal/normal-ssb/experiment/: BeladyTest.cpp  ExperimentMain.cpp  HardcodedPlanTestMultiPartition.cpp  HardcodedPlanTestSinglePartition.cpp  Tests.cpp  Tests.h
normal/normal-ssb/src/: TestUtil.cpp
normal/normal-test/src/: CacheTest.cpp  FileScanTest.cpp  MultiQueryTest.cpp  S3SelectScanTest.cpp
normal/normal-tuple/: CMakeLists.txt
normal/normal-tuple/src/: Column.cpp  ParquetReader.cpp  TupleSet2.cpp  TupleSetIndex.cpp
normal/normal-util/: CMakeLists.txt
normal/normal-util/src/: Util.cpp
(+193 files in other folders)
